# ScriptOPS

./: .gitignore  README.md  package-lock.json
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/app/: __init__.py  constants.py  main.py
apps/api/app/ai/: __init__.py  azure_client.py  chunker.py  formatter.py  orchestrator.py  prompts.py
apps/api/app/api/v1/: deps.py  router.py
apps/api/app/api/v1/endpoints/: auth.py  conversations.py  documents.py  health.py  sops.py
apps/api/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py  seed.py
apps/api/app/middleware/: rate_limit.py  request_context.py  security_headers.py
apps/api/app/models/: __init__.py  audit.py  conversation.py  document.py  sop.py  user.py
apps/api/app/repositories/: __init__.py  audit_repository.py  base.py  conversation_repository.py  document_repository.py  sop_repository.py  user_repository.py
apps/api/app/schemas/: __init__.py  auth.py  common.py  conversation.py  document.py  sop.py
apps/api/app/services/: auth_service.py  conversation_service.py  document_service.py  exporter.py  sop_service.py  storage_service.py
apps/api/app/utils/: __init__.py  file_validator.py  helpers.py  sanitizer.py  text_extractor.py
apps/api/tests/: conftest.py  test_health.py
apps/web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  (+1 more)
docs/: ARCHITECTURE.md  AZURE_SETUP.md  DEPLOYMENT.md
(+29 files in other folders)
